# devpost-project-01

./: .gitignore  README.md
agentic-backend/: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  heroku.yml  pyproject.toml
agentic-backend/__agents/: accounts.py  analytics.py  inventory.py  main_agent.py  marketing.py  payment.py  sales.py
agentic-backend/alembic/: env.py
agentic-backend/alembic/versions/: 169291dd6aec_merge_waitlist.py  4ce138b63426_merge_heads.py  556cc8b2acde_merge_heads.py  79ef2a14f0df_add_tenant_primary_architecture.py  87229900a69d_add_poster_generations_table.py  902506a98b4a_update_user_phone_primary_key_and_add_.py  a5479e200e4a_new_schema_changes.py  add_last_message_at_add_last_message_at_to_conversations.py  app_settings_001_add_app_settings_table.py  e7c282f29fad_remove_author_id_from_messages.py  fca1930d8a4d_update_whatsapp_creds_add_instance_name.py  fix_user_composite_key.py  google_sheets_v1_add_google_sheets_connection.py  waitlist_001_add_waitlist_table.py
agentic-backend/app/: main.py
agentic-backend/app/core/: config.py  datadog_tracing.py  security.py
agentic-backend/app/models/: __init__.py  app_settings.py  base.py  conversation.py  google_sheets_connection.py  message.py  poster_generation.py  quickbooks_connection.py  refresh_token.py  tenant.py  user.py  user_messages.py  waitlist.py  whatsapp_cred.py
agentic-backend/app/schema/: auth.py  chat.py  google_sheets.py  oauth.py  poster.py  quickbooks.py  tenant.py  user.py
agentic-backend/app/services/: auth_service.py  conversation_service.py  (+9 more)
(+49 files in other folders)
